--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,8 +87,8 @@
       "bootstrap" : { "deps" :['jquery'] }
     },
     paths: {
-      "jquery" : "//code.jquery.com/jquery-2.2.4.min",
-      "bootstrap" :  "//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min"
+      "jquery" : "//code.jquery.com/jquery-3.3.1.slim.min",
+      "bootstrap" :  "//stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min"
     }
   });
   require(["jquery", "bootstrap"]);
@@ -111,7 +111,7 @@
       ss.media = 'all';
     },0);
   }
-  loadCSS('//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/journal/bootstrap.min.css');
+  loadCSS('//stackpath.bootstrapcdn.com/bootswatch/3.4.1/journal/bootstrap.min.css');
   loadCSS("/css/custom.css")
 </script>
 </head>
